Log more information
* add Scaler trait

* add more plotted info; add Scaler trait

* make scaler plugable; report distribution of waiting time

* move plot script to a separate file

* print latency summary

--- a/algorithm-simulator/build.gradle
+++ b/algorithm-simulator/build.gradle
@@ -41,13 +41,13 @@ task runScenario(type: JavaExec) {
     }
 
     args = []
+    if(project.hasProperty('outDir')){
+        args += outDir
+    }
     if(project.hasProperty('exec')){
         args += exec
     }
-    if(project.hasProperty('create')){
+    if(project.hasProperty('create')) {
         args += create
-    }
-    if(project.hasProperty('outpath')){
-        args += outpath
     }
 }
